<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".screens.loginandregister.RegisterFragment">


    <View
        android:layout_width="@dimen/_480sdp"
        android:layout_height="@dimen/_430sdp"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="-229dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/circle_ui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_105sdp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/_20ssp" />




        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/outline_email"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableTint="@color/primary_green"
            android:ems="1"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lineSpacingMultiplier="1.5"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/outline_lock"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableTint="@color/primary_green"
            android:ems="1"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lineSpacingMultiplier="1.5"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="300dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/outline_lock"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableTint="@color/primary_green"
            android:ems="1"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lineSpacingMultiplier="1.5"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:backgroundTint="@color/primary_green"
            android:fontFamily="@font/poppis_semibold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alreadyAccBtn"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="#F3F8F3"
            android:fontFamily="@font/poppis_semibold"
            android:text="@string/already_have_an_account"
            android:textAllCaps="false"
            android:textColor="#808080"
            android:textSize="@dimen/_10ssp"
            app:cornerRadius="@dimen/_5sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_75sdp"
            android:fontFamily="@font/poppis_semibold"
            android:gravity="center"
            android:text="@string/or_continue_with"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/gmailImgBtn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/gmail" />


    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>