<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.landing.onboardingscreens.FirstFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_margin="@dimen/_15sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="fast_del.json"
        app:lottie_loop="true" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/animation_view"
            android:text="@string/fasted_delivery"
            android:fontFamily="@font/poppinsbold"
            android:textColor="#4CAF50"
            android:gravity="center"
            android:textSize="@dimen/_15ssp"/>

    <TextView
        android:id="@+id/para"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/lorem"
        android:padding="@dimen/_15sdp"
        android:textAlignment="textStart"
        android:justificationMode="inter_word"
        android:lineSpacingMultiplier="1.1"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppinsregular"
        android:textSize="@dimen/_10ssp"/>


    <TextView
        android:id="@+id/onBoardNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"

        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />



    </RelativeLayout>


